objects/Target_Process_Technology__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Proprietary__c</fullName>
        <label>Customer Proprietary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Release_Status__c</fullName>
        <label>Customer Release Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Cycle__c</fullName>
        <label>Life Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Family__c</fullName>
        <label>Process Family</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <label>Process Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <label>Technology Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Target Process Technology</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Customer_Proprietary__c</columns>
        <columns>Customer_Release_Status__c</columns>
        <columns>Geometry__c</columns>
        <columns>Life_Cycle__c</columns>
        <columns>Process_Family__c</columns>
        <columns>Process_Owner__c</columns>
        <columns>Technology_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PT Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Process Technologies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>